    "show_edge_fade_out, edge_fade_in_radius, edge_fade_out_radius" to
    distinguish them from new radar fade options.

* Session Widget
  - Removed "lap number" and "driver position" readings. Those two readings are now included in
    the new "Laps and position Widget".
  - Add "layout" option, which sets display orientation.
    Default is horizontal. Set "0" to show vertically.

* Tyre wear Widget
  - Now uses laptime pace for calculating "tyre lifespan in minutes".

* [Reworked]Weather Widget
  - Add weather trend indication, which shows whether there has been an increasing or
    decreasing trend for temperature, raininess, wetness readings for a given period.
    This can be useful to determine pit stop strategy.
  - Add "temperature_trend_interval", "raininess_trend_interval", "wetness_trend_interval"
    options, which set each trend interval in seconds. Default interval is "60" seconds.
  - Add "prefix_rain", "prefix_dry", "prefix_wet", "font_color_trend_constant",
    "font_color_trend_decreasing", "font_color_trend_increasing" options.
  - Improved display formatting for temperature, raininess, wetness readings.

* Weather forecast Widget
  - The "now" column always shows current weather condition
    even if RestAPI Module is disabled.

* Misc
  - Added new contributor Sihyung Park (naturale0) to contributors.md.

2.17.4 (2024-08-30)
-----------------------------
* General
  - Fixed state check error while restarting API in rare case.
  - Add clickable API button on main window status bar
    that opens "Shared Memory API" config dialog for easy access.

* Fuel calculator
  - Fixed an error when calculating with Gallon unit.

* Relative finish order Widget
  - Add "show_extra_refilling" option, which shows readings of extra refilling row
    below "local player's refilling" row. Each extra refilling value equals "extra laps
    of consumption" plus "local player's refilling" value of same column.