@@ -1438,7 +1438,7 @@ WIDGET_DEFAULT = {
         "position_x": 57,
         "position_y": 640,
         "opacity": 0.9,
-        "layout": 0,
+        "layout": 1,
         "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
